<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Neurokõne</string>
    <string name="service_name" translatable="false">TartuNLP Neurokõne</string>

    <string name="sample_text" translatable="false">Tere! Mina olen juturobot.</string>
    <string name="voice_title">Synthesize speech</string>
    <string name="voice_summary">Synthesize estonian speech in 10 different voices.</string>
    <string name="tts_settings_label">Voices</string>

    <string name="label_mari" translatable="false">Mari</string>
    <string name="label_tambet" translatable="false">Tambet</string>
    <string name="label_liivika" translatable="false">Liivika</string>
    <string name="label_kalev" translatable="false">Kalev</string>
    <string name="label_kylli" translatable="false">Külli</string>
    <string name="label_meelis" translatable="false">Meelis</string>
    <string name="label_albert" translatable="false">Albert</string>
    <string name="label_indrek" translatable="false">Indrek</string>
    <string name="label_vesta" translatable="false">Vesta</string>
    <string name="label_peeter" translatable="false">Peeter</string>

    <string name="saved">Voice chosen!</string>

</resources>